--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,700;1,400;1,700&display=swap');
+
 #root {
-  max-width: 1280px;
+  font-family: 'Nunito', sans-serif;
   margin: 0 auto;
   text-align: center;
   width: 100%;
@@ -7,12 +9,43 @@
 
 .navbar {
   background-color: #333; /* Color de fondo del navbar */
-  overflow: hidden;
   display: flex;
-  width: 100%;
   align-items: center;
   justify-content: space-between;
   flex-wrap: nowrap;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  height: 85px;
+  padding: 5px 10%;
+}
+
+.icon {
+  height: 70px;
+  width: auto;
+}
+
+.navbar .icon {
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.navbar .icon:hover {
+  transform: scale(1.2);
+}
+
+.navbar .listaNavBar {
+  list-style: none;
+}
+
+.navbar .listaNavBar li {
+  display: inline-block;
+  padding: 0 20px;
+}
+
+.navbar .listaNavBar li:hover {
+  transform: scale(1.1);
+}
+
+.navbar .listaNavBar a {
+  text-decoration: none;
+  font-size: 20px;
+  color: #eceff1;
 }
