--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,20 @@
   width: 100%;
 }
 
+.greeting {
+  color: #274939;
+}
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  color: #274939;
+}
+
 .navbar {
-  background-color: #333; /* Color de fondo del navbar */
+  background-color: #274939; 
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -51,7 +63,7 @@
 }
 
 .navbar .listaNavBar li a:hover {
-  color: #274939;
+  color: #fefefe;
 }
 
 .product-container {
@@ -60,9 +72,14 @@
   width: 15vw;
   min-height: 350px;
   max-height: 400px;
-  margin: 10px;
-  border: solid 4px #274939;
-  border-radius: 5px;  
+  margin: 20px;
+  border: solid 1px #274939;
+  border-radius: 2px;  
+  transition: all 0.5s;
+}
+
+.product-container:hover {
+  transform: scale(1.1);
 }
 
 .foot-product {
@@ -77,7 +94,8 @@
 }
 
 .foot-product button {
-  height: auto;
+  height: 40px;
+  width: 50%;
   background-color: #274939;
   color: #fefefe;
   border: none;
