--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   font-family: 'Nunito', sans-serif;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.86);
-  background-color: #242424;
+  background-color: #fefefe;
 }
 
 body {
