--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,700;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
   line-height: 1.5;
   font-weight: 400;
   width: 100%;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Lato", sans-serif;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.86);
-  background-color: #fefefe;
+  height: 100vh; 
 }
 
 body {
   margin: 0;
   display: flex;
   width: 100%;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: #ccc;
 }
 
 
