--- a/src/App.css
+++ b/src/App.css
@@ -63,11 +63,13 @@
 }
 
 .cart h4 {
-  background-color: #ccc;
-  border-radius: 5px;
+  background-color: white;
+  border-radius: 50%;
   margin-left: 10px;
-  width: 20px;
-  color: black;
+  width: 30px; 
+  height: 30px; 
+  text-align: center;
+  line-height: 30px;
 }
 
 .drop-down {
