--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -25,6 +25,10 @@
     display: block;
 }
 
+#mate-image:hover + img {
+    display: inline-block;
+}
+
 .card-name {
     margin-left: 5px;
     font-family: "Lato", sans-serif;
@@ -37,8 +41,9 @@
 
 .card-header {
     display: flex;
-    justify-content: flex-end;    
-    margin-right: 2.5px;
+    justify-content: space-between;    
+    
+    padding: 5px;
 }
 
 .card-price {
@@ -56,7 +61,7 @@
     align-items: center;
 }
 
-.card button {
+.card-button {
     background-color: #274939;
     color: white;
     border: none;
@@ -65,7 +70,7 @@
     transition: all 0.3s;
 }
 
-.card button:hover {
+.card-button:hover {
     background-color: white;
     color: #274939;
     border: solid 1px #274939;
