--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,73 @@
   padding: 5px 10%;
 }
 
+.footer {
+ background-color: #274939;
+ padding: 80px 0;
+}
+
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-links {
+  width: 25%;
+  padding: 0 15px;
+}
+
+.footer-links h4{
+  font-size: 20px;
+  color: #FFFFFF;
+  margin-bottom: 25px;
+  font-weight: 500;
+  border-bottom: 2px solid white;
+  padding-bottom: 10px ;
+  display: inline-block;
+}
+
+.footer ul li a {
+  font-size: 18px;
+  text-decoration: none;
+  color: #BBBBBB;
+  display: block;
+  margin-bottom: 15px;
+  transition: all .3s ease;
+}
+
+.footer-links ul li a:hover {
+  color: #FFFFFF;
+  padding-left: 6px;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-link a {
+  min-height: 40px;
+  width: 40px;
+  background-color: rgba(red, green, blue, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center; /* Esto no es necesario, pero si los iconos son texto, puede ser útil */
+  line-height: 40px;
+  border-radius: 50%;
+  color: #FFFFFF;
+  transition: all .5s ease;
+  font-size: 30px;
+}
+
+.social-link a:hover {
+  color: #BBBBBB;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .icon {
   height: 70px;
   width: auto;
